add mockHalterConstructor in test to intercept the crash